--- a/.gitignore
+++ b/.gitignore
@@ -1,27 +1,17 @@
-/dist
-/tmp
-/out-tsc
+# Cypress generated files
+/cypress/videos/
+/cypress/screenshots/
 
-pids
-*.pid
-*.seed
-*.pid.lock
+# Cypress environment variables
+/cypress.env.json
 
-.vscode/*
-!.vscode/settings.json
-!.vscode/tasks.json
-!.vscode/launch.json
-!.vscode/extensions.json
+# Cypress binary cache
+/.cache/
 
-logs
+# Node modules
+/node_modules/
+
+# Miscellaneous files
+.DS_Store
 *.log
 npm-debug.log*
-yarn-debug.log*
-yarn-error.log*
-
-node_modules/
-
-.npm
-
-cypress/videos/
-cypress/screenshots/
