--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "cypress run --reporter mochawesome"
+    "test": "cypress run --headed --reporter mochawesome"
   },
   "keywords": [],
   "author": "",
